# deepseek-wechat-automation

./: .env.example  README.md  pyproject.toml
.github/workflows/: build_binary.yml
alembic/: env.py
alembic/versions/: 1071baf42771_add_override_prompt.py  18a982f762ea_add_override_username.py  6bec1f5f2a65_add_override_author.py  9d7f39385afe_initial_commit.py  ff86dfacb1ca_initial_commit.py
deepseek_wechat_automation/: main.py
deepseek_wechat_automation/app/: database.py  logging.py  models.py  sessions.py  settings.py  templates.py
deepseek_wechat_automation/app/uploader/: base.py  offiaccount.py
deepseek_wechat_automation/app/usecases/: clipboard.py  generator.py  scheduler.py
templates/: index.html
tests/: test_create_context.py  test_generate.py  test_restore_context.py  test_trigger_post.py
