[tool.poetry]
name = "deepseek-wechat-automation"
version = "1.0.1"
description = ""
authors = ["Usagi no Niku <chenbohan911@163.com>"]
readme = "README.md"
packages = [
    { include = "deepseek_wechat_automation" }
]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.28.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
sqlmodel = "^0.0.22"
apscheduler = "^3.11.0"
alembic = "^1.14.1"
httpx = "^0.28.1"
openai = "^1.63.0"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
pywin32 = "^308"
pillow = "^11.1.0"
emoji = "^2.14.1"

[tool.poetry.scripts]
app = "deepseek_wechat_automation.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
